fixed the horizontal scroll for mobile.

--- a/body.css
+++ b/body.css
@@ -19,6 +19,7 @@ header {
 
   main {
     overflow-y:hidden;
+    overflow-x: hidden;
   }
   
 }
